<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box 1</string>
    <string name="box_two">Box 2</string>
    <string name="box_three">Box 3</string>
    <string name="box_four">Box 4</string>
    <string name="box_five">Box 5</string>
    <string name="button_red">Red</string>
    <string name="button_yellow">Yellow</string>
    <string name="button_green">Green</string>
    <string name="how_to_play">How to play</string>
    <string name="tap_boxes_and_buttons">Tap the screen and buttons</string>
    <string name="love_green">I love Green!</string>
    <string name="love_red">I love Red!</string>
    <string name="love_yellow">I love Yellow!</string>
    <string name="nice_background">This background color looks fire!</string>
    <string name="nice_box">This box is nice!</string>
    <string name="give_me_some_collors">Give me some collors.</string>


</resources>